@@ -1,5 +1,10 @@
 2010-08-03  Sergio Martin <sergio.martin@artica.es>
 
+	* operation/agentes/estado_ultimopaquete.php: Fixed log4x modules
+	check from old id value 30 to new id value 24
+
+2010-08-03  Sergio Martin <sergio.martin@artica.es>
+
 	* pandoradb.sql
 	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added a id_policy_module
 	field into agente_modulo table for future use
